tests/fixtures/negative/style/UnnecessaryFullyQualifiedName.kt
package style

import java.util.ArrayList

fun example() {
    val x: ArrayList<Int> = ArrayList()
}
